==> gimasi/osG/board/NXP/MK28FN2M0VMI15/src/drivers/board-Spi.c <==
#include <string.h>
#include "../../../../include/board/drivers/board-Spi.h"
#include "board-SpiSupport.h"
#include "../../../../../osg/include/osg.h"

void osg_board_Spi_ctor(osg_Spi * self, const osg_SpiConfig * const config)
{
    if (_osg_board_Spi_checkSpi(self->id) == false)
    {
        osg_error("ERROR: SPI port not available on this device.");
    }

    if (_osg_board_Spi_validateSpiPins(self->id, config->mode, self->sclkPin.id, self->mosiPin.id, self->misoPin.id) == false)
    {
        osg_error("ERROR: Wrong PINs configuration for SPI port on this board.");
    }

    if (_osg_board_Spi_validateSsPins(self->id, config->mode, self->ssPinList, self->ssPinListSize) == false)
    {
        osg_error("ERROR: Invalid Slave Select PINs selection. Please refer to the board datasheet.");
    }
    _osg_board_Spi_initSsPins(self->id, config->ssMode, self->ssPinList, self->ssPinListSize, 0);

    osg_SpiImpl * spi = _osg_board_Spi_getSpiById(self->id);
    spi->handler = _osg_board_Spi_getSpiInstance(self->id);
    spi->flags = OSG_SPI_FLAG_DEFAULT;
    spi->mode = config->mode;

    if (spi->mode == OSG_SPI_MASTER_MODE)
    {
        dspi_master_config_t masterConfig;
        masterConfig.whichCtar = kDSPI_Ctar0;
        masterConfig.ctarConfig.baudRate = config->clockSpeed;
        masterConfig.ctarConfig.bitsPerFrame = _osg_board_Spi_decodeDataSize(config->dataSize);
        masterConfig.ctarConfig.cpol = _osg_board_Spi_decodePolarity(config->polarity);
        masterConfig.ctarConfig.cpha = _osg_board_Spi_decodePhase(config->phase);
        masterConfig.ctarConfig.direction = _osg_board_Spi_decodeEndianess(config->endianess);
        masterConfig.ctarConfig.pcsToSckDelayInNanoSec = 1000000000U / config->clockSpeed;
        masterConfig.ctarConfig.lastSckToPcsDelayInNanoSec = 1000000000U / config->clockSpeed;
        masterConfig.ctarConfig.betweenTransferDelayInNanoSec = 1000000000U / config->clockSpeed;

        // @todo: return the correct PCS
        masterConfig.whichPcs = kDSPI_Pcs1;
        masterConfig.pcsActiveHighOrLow = kDSPI_PcsActiveLow;

        masterConfig.enableContinuousSCK = false;
        masterConfig.enableRxFifoOverWrite = false; // NOTE: can be useful to set true?
        masterConfig.enableModifiedTimingFormat = false;
        masterConfig.samplePoint = kDSPI_SckToSin0Clock;

        DSPI_MasterInit((osg_board_SpiInstance *)spi->handler, &masterConfig, _osg_board_Spi_getSpiClk(self->id));
    }
    else
    {
        dspi_slave_config_t slaveConfig;
        slaveConfig.whichCtar = kDSPI_Ctar0;
        slaveConfig.ctarConfig.bitsPerFrame = _osg_board_Spi_decodeDataSize(config->dataSize);
        slaveConfig.ctarConfig.cpol = _osg_board_Spi_decodePolarity(config->polarity);
        slaveConfig.ctarConfig.cpha = _osg_board_Spi_decodePhase(config->phase);

        slaveConfig.enableContinuousSCK = false;
        slaveConfig.enableRxFifoOverWrite = false; // NOTE: can be useful to set true?
        slaveConfig.enableModifiedTimingFormat = false;
        slaveConfig.samplePoint = kDSPI_SckToSin0Clock;

        DSPI_SlaveInit((osg_board_SpiInstance *)spi->handler, &slaveConfig);
    }

#if SPI_MUTEX_ENABLED
    osg_Mutex * mutex = _osg_board_Spi_getMutex(self->id);
    if (mutex->status != OSG_MUTEX_STATUS_CONFIGURED)
    {
        _osg_board_Spi_configureMutex(self->id);
        osg_Mutex_ctor(mutex, OSG_MUTEX_RECURSIVE_ENABLED | OSG_MUTEX_RELEASE_WHEN_THREAD_EXIT, "SPI mutex.");
        mutex->status = OSG_MUTEX_STATUS_CONFIGURED;
    }
#endif
}

void osg_board_Spi_dtor(osg_Spi * self)
{
    osg_SpiImpl * spi = _osg_board_Spi_getSpiById(self->id);
    DSPI_Deinit((osg_board_SpiInstance *)spi->handler);

    _osg_board_Spi_deinitSSPins(self->id, self->ssPinList, self->ssPinListSize);

    spi->mode = OSG_SPI_SLAVE_MODE;
    spi->txCompleteNb = NULL;
    spi->rxCompleteNb = NULL;
    spi->txCompleteBuffered = NULL;
    spi->rxCompleteBuffered = NULL;
    osg_CircularFifo_dtor(&spi->txFifo);
    osg_CircularFifo_dtor(&spi->rxFifo);
    spi->handler = NULL;
    spi->flags = OSG_SPI_FLAG_DEFAULT;
    spi->rxByte = 0;
}

bool osg_board_Spi_sendBlocking(osg_Spi * self, const uint16_t ssPinIndex, void * buffer, const Size bufferSize, const uint32_t timeout)
{
#if SPI_MUTEX_ENABLED
    osg_Mutex * mutex = _osg_board_Spi_getMutex(self->id);
    osg_assert(mutex->status == OSG_MUTEX_STATUS_CONFIGURED, "ASSERT FAILED: SPI mutex is not created.");
    const bool acq = osg_Mutex_acquire(mutex, 0);
    if (acq == false)
        return false;
#endif

    osg_SpiImpl * spi = _osg_board_Spi_getSpiById(self->id);
    osg_board_SpiInstance * instance = (osg_board_SpiInstance *)spi->handler;
    osg_board_SpiHandler * handle = _osg_board_Spi_getSpiHandler(self->id);
    int state = -1;

    dspi_transfer_t xfer = {0};
    xfer.txData = buffer;
    xfer.rxData = NULL;
    xfer.dataSize = bufferSize;
    if (spi->mode == OSG_SPI_MASTER_MODE)
    {
        // @todo: select the correct slave
        xfer.configFlags = kDSPI_MasterCtar0 | kDSPI_MasterPcs0 | kDSPI_MasterPcsContinuous;
    }
    else
    {
        xfer.configFlags = kDSPI_SlaveCtar0;
    }

    osg_Timer timer;
    osg_TimerConfig config;
    config.type = OSG_TIMER_ONE_SHOT;
    config.callback = _osg_board_Spi_timeoutCallback;
    config.argument = &state;
    osg_Timer_ctor(&timer, &config);
    status_t res;
    if (spi->mode == OSG_SPI_MASTER_MODE)
    {
        DSPI_MasterTransferCreateHandle(instance,
                                        &handle->masterHandle,
                                        _osg_board_Spi_masterBlockingCallback,
                                        &state);
        res = DSPI_MasterTransferNonBlocking(instance,
                                             &handle->masterHandle,
                                             &xfer);
    }
    else
    {
        DSPI_SlaveTransferCreateHandle(instance,
                                       &handle->slaveHandle,
                                       _osg_board_Spi_slaveBlockingCallback,
                                       &state);
        res = DSPI_SlaveTransferNonBlocking(instance,
                                            &handle->slaveHandle,
                                            &xfer);
    }

    bool ret = false;
    if (res != kStatus_Success)
    {
        ret = false;
    }
    else
    {
        osg_Timer_start(&timer, timeout);
        while (true)
        {
            if (state == kStatus_Success)
            {
                ret = true;
                break;
            }

            if (state == kStatus_DSPI_Error)
            {
                ret = false;
                break;
            }
        }

        if (ret == false)
        {
            if (spi->mode == OSG_SPI_MASTER_MODE)
                DSPI_MasterTransferAbort(instance, &handle->masterHandle);
            else
                DSPI_SlaveTransferAbort(instance, &handle->slaveHandle);
        }
        
        osg_Timer_stop(&timer);
    }
    
    osg_Timer_dtor(&timer);

#if SPI_MUTEX_ENABLED
    const bool rel = osg_Mutex_release(mutex);
    osg_assert(rel == true, "ASSERT FAIL: Impossible to release SPI mutex.");
#endif

    return false;
}

bool osg_board_Spi_receiveBlocking(osg_Spi * self, const uint16_t ssPinIndex, void * buffer, const Size bufferSize, const uint32_t timeout)
{
#if SPI_MUTEX_ENABLED
    osg_Mutex * mutex = _osg_board_Spi_getMutex(self->id);
    osg_assert(mutex->status == OSG_MUTEX_STATUS_CONFIGURED, "ASSERT FAILED: SPI mutex is not created.");
    const bool acq = osg_Mutex_acquire(mutex, 0);
    if (acq == false)
        return false;
#endif

    osg_SpiImpl * spi = _osg_board_Spi_getSpiById(self->id);
    osg_board_SpiInstance * instance = (osg_board_SpiInstance *)spi->handler;
    osg_board_SpiHandler * handle = _osg_board_Spi_getSpiHandler(self->id);
    int state = -1;

    dspi_transfer_t xfer = {0};
    xfer.txData = NULL;
    xfer.rxData = buffer;
    xfer.dataSize = bufferSize;
    if (spi->mode == OSG_SPI_MASTER_MODE)
    {
        // @todo: select the correct slave
        xfer.configFlags = kDSPI_MasterCtar0 | kDSPI_MasterPcs0 | kDSPI_MasterPcsContinuous;
    }
    else
    {
        xfer.configFlags = kDSPI_SlaveCtar0;
    }

    osg_Timer timer;
    osg_TimerConfig config;
    config.type = OSG_TIMER_ONE_SHOT;
    config.callback = _osg_board_Spi_timeoutCallback;
    config.argument = &state;
    osg_Timer_ctor(&timer, &config);
    status_t res;
    if (spi->mode == OSG_SPI_MASTER_MODE)
    {
        DSPI_MasterTransferCreateHandle(instance,
                                        &handle->masterHandle,
                                        _osg_board_Spi_masterBlockingCallback,
                                        &state);
        res = DSPI_MasterTransferNonBlocking(instance,
                                             &handle->masterHandle,
                                             &xfer);
    }
    else
    {
        DSPI_SlaveTransferCreateHandle(instance,
                                       &handle->slaveHandle,
                                       _osg_board_Spi_slaveBlockingCallback,
                                       &state);
        res = DSPI_SlaveTransferNonBlocking(instance,
                                            &handle->slaveHandle,
                                            &xfer);
    }

    bool ret = false;
    if (res != kStatus_Success)
    {
        ret = false;
    }
    else
    {
        osg_Timer_start(&timer, timeout);
        while (true)
        {
            if (state == kStatus_Success)
            {
                ret = true;
                break;
            }

            if (state == kStatus_DSPI_Error)
            {
                ret = false;
                break;
            }
        }

        if (ret == false)
        {
            if (spi->mode == OSG_SPI_MASTER_MODE)
                DSPI_MasterTransferAbort(instance, &handle->masterHandle);
            else
                DSPI_SlaveTransferAbort(instance, &handle->slaveHandle);
        }
        
        osg_Timer_stop(&timer);
    }
    
    osg_Timer_dtor(&timer);

#if SPI_MUTEX_ENABLED
    const bool rel = osg_Mutex_release(mutex);
    osg_assert(rel == true, "ASSERT FAIL: Impossible to release SPI mutex.");
#endif

    return false;
}

bool osg_board_Spi_sendNonBlocking(osg_Spi * self, const uint16_t ssPinIndex, void * buffer, const Size bufferSize)
{
    osg_SpiImpl * spi = _osg_board_Spi_getSpiById(self->id);
    osg_board_SpiInstance * instance = (osg_board_SpiInstance *)spi->handler;
    osg_board_SpiHandler * handle = _osg_board_Spi_getSpiHandler(self->id);

    dspi_transfer_t xfer = {0};
    xfer.txData = buffer;
    xfer.rxData = NULL;
    xfer.dataSize = bufferSize;
    if (spi->mode == OSG_SPI_MASTER_MODE)
    {
        // @todo: select the correct slave
        xfer.configFlags = kDSPI_MasterCtar0 | kDSPI_MasterPcs0 | kDSPI_MasterPcsContinuous;
    }
    else
    {
        xfer.configFlags = kDSPI_SlaveCtar0;
    }

    const osg_SpiFlags restore = spi->flags;
    spi->flags |= OSG_SPI_FLAG_IS_NB_SEND | OSG_SPI_FLAG_IS_SEND;

    status_t res;
    if (spi->mode == OSG_SPI_MASTER_MODE)
    {
        DSPI_MasterTransferCreateHandle(instance,
                                        &handle->masterHandle,
                                        _osg_board_Spi_masterSendNBCallback,
                                        NULL);
        res = DSPI_MasterTransferNonBlocking(instance,
                                             &handle->masterHandle,
                                             &xfer);
    }
    else
    {
        DSPI_SlaveTransferCreateHandle(instance,
                                       &handle->slaveHandle,
                                       _osg_board_Spi_slaveSendNBCallback,
                                       NULL);
        res = DSPI_SlaveTransferNonBlocking(instance,
                                            &handle->slaveHandle,
                                            &xfer);
    }

    const bool ret = res == kStatus_Success ? true : false;
    if (!ret)
    {
        spi->flags = restore;
    }

    return ret;
}

bool osg_board_Spi_receiveNonBlocking(osg_Spi * self, const uint16_t ssPinIndex, void * buffer, const Size bufferSize)
{
    osg_SpiImpl * spi = _osg_board_Spi_getSpiById(self->id);
    osg_board_SpiInstance * instance = (osg_board_SpiInstance *)spi->handler;
    osg_board_SpiHandler * handle = _osg_board_Spi_getSpiHandler(self->id);

    dspi_transfer_t xfer = {0};
    xfer.txData = NULL;
    xfer.rxData = buffer;
    xfer.dataSize = bufferSize;
    if (spi->mode == OSG_SPI_MASTER_MODE)
    {
        // @todo: select the correct slave
        xfer.configFlags = kDSPI_MasterCtar0 | kDSPI_MasterPcs0 | kDSPI_MasterPcsContinuous;
    }
    else
    {
        xfer.configFlags = kDSPI_SlaveCtar0;
    }

    if (spi->flags & OSG_SPI_FLAG_RX_BUFF_ENABLED) return false;
    const osg_SpiFlags restore = spi->flags;
    spi->flags |= OSG_SPI_FLAG_IS_NB_RECEIVE | OSG_SPI_FLAG_IS_RECEIVE;

    status_t res;
    if (spi->mode == OSG_SPI_MASTER_MODE)
    {
        DSPI_MasterTransferCreateHandle(instance,
                                        &handle->masterHandle,
                                        _osg_board_Spi_masterRecvNBCallback,
                                        NULL);
        res = DSPI_MasterTransferNonBlocking(instance,
                                             &handle->masterHandle,
                                             &xfer);
    }
    else
    {
        DSPI_SlaveTransferCreateHandle(instance,
                                       &handle->slaveHandle,
                                       _osg_board_Spi_slaveRecvNBCallback,
                                       NULL);
        res = DSPI_SlaveTransferNonBlocking(instance,
                                            &handle->slaveHandle,
                                            &xfer);
    }

    const bool ret = res == kStatus_Success ? true : false;
    if (!ret)
    {
        spi->flags = restore;
    }

    return ret;
}

void osg_board_Spi_stopReceiveBuffered(osg_Spi * self)
{
    osg_SpiImpl * spi = _osg_board_Spi_getSpiById(self->id);
    osg_assert(osg_CircularFifo_isNull(&spi->rxFifo) == false, "ASSERT FAILED: SPI Rx Buffer is NULL");
    osg_board_SpiHandler * handle = _osg_board_Spi_getSpiHandler(self->id);

    if (spi->flags & OSG_SPI_FLAG_RX_BUFF_ENABLED)
    {
        if (spi->mode == OSG_SPI_MASTER_MODE)
        {
            DSPI_MasterTransferAbort((osg_board_SpiInstance *)spi->handler, &handle->masterHandle);
        }
        else
        {
            DSPI_SlaveTransferAbort((osg_board_SpiInstance *)spi->handler, &handle->slaveHandle);
        }
    }
    osg_CircularFifo_clear(&spi->rxFifo);
}

bool osg_board_Spi_sendReceiveBlocking(osg_Spi * self, const uint16_t ssPinIndex, void * bufferTx, void * bufferRx, const Size transferSize, const uint32_t timeout)
{
#if SPI_MUTEX_ENABLED
    osg_Mutex * mutex = _osg_board_Spi_getMutex(self->id);
    osg_assert(mutex->status == OSG_MUTEX_STATUS_CONFIGURED, "ASSERT FAILED: SPI mutex is not created.");
    const bool acq = osg_Mutex_acquire(mutex, 0);
    if (acq == false)
        return false;
#endif

    osg_SpiImpl * spi = _osg_board_Spi_getSpiById(self->id);
    osg_board_SpiInstance * instance = (osg_board_SpiInstance *)spi->handler;
    osg_board_SpiHandler * handle = _osg_board_Spi_getSpiHandler(self->id);
    int state = -1;

    dspi_transfer_t xfer = {0};
    xfer.txData = bufferTx;
    xfer.rxData = bufferRx;
    xfer.dataSize = transferSize;
    if (spi->mode == OSG_SPI_MASTER_MODE)
    {
        // @todo: select the correct slave
        xfer.configFlags = kDSPI_MasterCtar0 | kDSPI_MasterPcs0 | kDSPI_MasterPcsContinuous;
    }
    else
    {
        xfer.configFlags = kDSPI_SlaveCtar0;
    }

    osg_Timer timer;
    osg_TimerConfig config;
    config.type = OSG_TIMER_ONE_SHOT;
    config.callback = _osg_board_Spi_timeoutCallback;
    config.argument = &state;
    osg_Timer_ctor(&timer, &config);
    status_t res;
    if (spi->mode == OSG_SPI_MASTER_MODE)
    {
        DSPI_MasterTransferCreateHandle(instance,
                                        &handle->masterHandle,
                                        _osg_board_Spi_masterBlockingCallback,
                                        &state);
        res = DSPI_MasterTransferNonBlocking(instance,
                                             &handle->masterHandle,
                                             &xfer);
    }
    else
    {
        DSPI_SlaveTransferCreateHandle(instance,
                                       &handle->slaveHandle,
                                       _osg_board_Spi_slaveBlockingCallback,
                                       &state);
        res = DSPI_SlaveTransferNonBlocking(instance,
                                            &handle->slaveHandle,
                                            &xfer);
    }

    bool ret = false;
    if (res != kStatus_Success)
    {
        ret = false;
    }
    else
    {
        osg_Timer_start(&timer, timeout);
        while (true)
        {
            if (state == kStatus_Success)
            {
                ret = true;
                break;
            }

            if (state == kStatus_DSPI_Error)
            {
                ret = false;
                break;
            }
        }

        if (ret == false)
        {
            if (spi->mode == OSG_SPI_MASTER_MODE)
                DSPI_MasterTransferAbort(instance, &handle->masterHandle);
            else
                DSPI_SlaveTransferAbort(instance, &handle->slaveHandle);
        }
        
        osg_Timer_stop(&timer);
    }
    
    osg_Timer_dtor(&timer);

#if SPI_MUTEX_ENABLED
    const bool rel = osg_Mutex_release(mutex);
    osg_assert(rel == true, "ASSERT FAIL: Impossible to release SPI mutex.");
#endif

    return ret;
}
